:lipstick: update media

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Deeploy.ml</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="Deeploy.ico" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
     <div id="box"></div>
     <div class="circle">
-        <img class="logo" src="falco.gif" alt="Logo">
+        <img class="logo" src="Deeploy.png" alt="Logo">
     </div>
     <div id="wrapper"></div>
 
