Adjust for redirect

--- a/index.html
+++ b/index.html
@@ -1,112 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Deeploy.ml</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/ico" href="Deeploy.ico" />
-</head>
-
-<body>
-
-    <div id="particles-js">
-        <div class="btext">
-            <h1>Deeploy.ml</h1>
-            <p>Coming soon...</p>
-        </div>
-    </div>
-
-    <div id="box"></div>
-    <div class="circle">
-        <img class="logo" src="Deeploy.png" alt="Logo">
-    </div>
-    <div id="wrapper"></div>
-
-    <script src="particles.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.4/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="main.js"></script>
-    <script>
-            var partJson = {
-                "particles": {
-                    "number": {
-                        "value": 80
-                    },
-                    "color": {
-                        "value": "#f9f3f4"
-                    },
-                    "shape": {
-                        "type": "circle",
-                        "stroke": {
-                            "width": 3,
-                            "color": "#ccc"
-                        }
-                    },
-                    "opacity": {
-                        "value": 0.7,
-                        "random": true
-                    },
-                    "size": {
-                        "value": 2
-                    },
-                    "line_linked": {
-                        "enable": true,
-                        "distance": 150
-                    },
-                    "move": {
-                        "enable": true,
-                        "speed": 2
-                    }
-                },
-                "interactivity": {
-                    "detect_on": "canvas",
-                    "events": {
-                        "onhover": {
-                            "enable": true,
-                            "mode": "grab"
-                        },
-                        "onclick": {
-                            "enable": false,
-                            "mode": "push"
-                        },
-                        "resize": false
-                    },
-                    "modes": {
-                        "grab": {
-                            "distance": 500,
-                            "line_linked": {
-                                "opacity": 0.8
-                            }
-                        },
-                        "bubble": {
-                            "distance": 800,
-                            "size": 80,
-                            "duration": 2,
-                            "opacity": 0.8,
-                            "speed": 3
-                        },
-                        "repulse": {
-                            "distance": 400,
-                            "duration": 0.4
-                        },
-                        "push": {
-                            "particles_nb": 4
-                        },
-                        "remove": {
-                            "particles_nb": 2
-                        }
-                    }
-                },
-            };
-            var jsonUri = "data:text/plain;base64," + window.btoa(JSON.stringify(partJson));
-            particlesJS.load('particles-js', jsonUri,
-                function () {
-                    console.log('particles.json loaded...')
-                })
-        </script>
-</body>
-
-</html>
+<meta http-equiv="refresh" content="1;url=https://deeploy.ml/" />
